--- a/website/src/assets/css/homepage.css
+++ b/website/src/assets/css/homepage.css
@@ -8,7 +8,6 @@
   src: url(../media/TextFonts.net_jeko-font-family/Jeko\ Regular.ttf) format("truetype");
 }
 
-
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif, Jetbrains-mono, Jeko;
     -webkit-font-smoothing: antialiased;
@@ -24,73 +23,6 @@ body {
   background-size: cover;
 }
 
-nav {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  margin: 0;
-}
-
-.logo {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-nav ul{
-  margin: 0;
-  padding: 0;
-  margin: 0rem 1rem;
-}
-
-ul.topnav li{
-  list-style: none;
-  float: left;
-}
-
-ul.topnav li a{
-  font-size: 1rem;
-  color: white;
-  text-decoration: none;
-  padding: 0.5rem 0.5rem;
-  text-align: center;
-  font-weight: bold;
-  font-family: Jetbrains-mono;
-  position: relative;
-  display: inline-block;
-}
-
-ul.topnav li.register_button {
-  position: relative;
-  float: right;
-  margin: 0px 10px 0px 10px;
-  text-decoration: none;
-  color: white;
-  background-color: red;
-  padding: 2px;
-  border-radius: 5px;
-  font-size: 1em;
-  font-weight: bold;
-  font-family: Jetbrains-mono;
-}
-
-ul.topnav li a:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: red;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-ul.topnav li a:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
 .content {
   padding-top: 25vh;
   display: flex;
@@ -103,12 +35,12 @@ ul.topnav li a:hover:after {
 .content .homepage_content {
   display: flex;
   flex-direction: column;
-  flex-basis: 40%;
+  flex-basis: 30%;
   flex-wrap: wrap;
 }
 
 .content .homepage_content h1 {
-  margin: 0px 10px 10px 10px;
+  margin: 0px 10px 10px 2px;
   color: white;
   text-align: left;
   font-family: Jeko;
@@ -118,7 +50,7 @@ ul.topnav li a:hover:after {
 }
 
 .content .homepage_content h3 {
-  margin: 0px 10px 0px 10px;
+  margin: 0px 10px 0px 2px;
   color:white;
   text-align: left;
   font-weight: bolder;
@@ -157,12 +89,12 @@ ul.topnav li a:hover:after {
 }
 
 .content .bubble_effect {
-  flex-basis: 60%;
+  flex-basis: 70%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 10px;
-  transform: translate(8vw, -25vh);
+  transform: translate(0, -20vh);
 }
 
 
@@ -172,6 +104,7 @@ ul.topnav li a:hover:after {
   object-fit: cover;
   width: 70%;
   height: 70%;
+  margin-left: 50%;
 }
 
 .content .bubble_effect img.marissa {
@@ -180,7 +113,7 @@ ul.topnav li a:hover:after {
   height: 65%; 
   border-radius: 50%;
   object-fit: cover;
-  margin-left: -70%;
+  margin-left: -5%;
   margin-top: 30%;
 }
 
@@ -190,7 +123,7 @@ ul.topnav li a:hover:after {
   width: 60%;
   height: 60%;
   border-radius: 50%;
-  margin-left: 10%;
+  margin-left: 65%;
   margin-top: -30%;
   object-fit: cover;
 }
@@ -200,13 +133,13 @@ ul.topnav li a:hover:after {
   position: relative;
   width: 40%;
   height: 40%;
-  margin-left: -90%;
+  margin-left: -15%;
   margin-top: -5%;
   border-radius: 50%;
   object-fit: cover;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .content {
     flex-direction: column;
     justify-content: center;
@@ -227,6 +160,7 @@ ul.topnav li a:hover:after {
     padding: 0;
     margin-top: 200px;
     text-align: center;
+    margin-left: -20%;
     flex-basis: 50%;
   }
 
