Make ide disappear when screensize is too small

--- a/website/src/assets/css/register_terminal_view.css
+++ b/website/src/assets/css/register_terminal_view.css
@@ -92,3 +92,9 @@ h1 {
 .register_container .terminal_container input:focus {
     outline-width: 0;
 }
+
+@media screen and (max-width: 650px) {
+    .register_container .ide_container .ide_body {
+        display: none;   
+    }
+}
