Design an event card Add logic handling for when the user is not authenticated Add user role in the user schema

--- a/website/src/assets/css/homepage.css
+++ b/website/src/assets/css/homepage.css
@@ -8,6 +8,11 @@
   src: url(../media/TextFonts.net_jeko-font-family/Jeko\ Regular.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "Poppins";
+  src: url(../media/poppins/Poppins_Medium_500.ttf) format("truetype");
+}
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif, Jetbrains-mono, Jeko;
     -webkit-font-smoothing: antialiased;
