Add event registration functionality Add the front-end for event registration as a non-member Refine user authentication display logic Add the front-end for the dashboard

--- a/website/src/assets/css/homepage.css
+++ b/website/src/assets/css/homepage.css
@@ -14,12 +14,12 @@
 }
 
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif, Jetbrains-mono, Jeko;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-  }
+  font-family: Avenir, Helvetica, Arial, sans-serif, Jetbrains-mono, Jeko, Poppins;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+}
   
 .content {
   transform: translate(0, 25vh);
