--- a/website/src/assets/css/register_terminal_view.css
+++ b/website/src/assets/css/register_terminal_view.css
@@ -7,7 +7,8 @@ h1 {
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    min-height: 100vh;
     align-items: center;
     font-family: Menlo;
     border-radius: 10px;
